tests/latch/static/failing/fib.wat
version https://git-lfs.github.com/spec/v1
oid sha256:bd6788636bdea608ae902b0436d6382952fe5189ef6bdebf52b378b91d0e0df7
size 1399763
